# freezing-batman

./: .gitignore  LICENSE  README.md
GlobalPlanner/: CMakeLists.txt
GlobalPlanner/include/a_star_grid/: AStarGrid.hpp
GlobalPlanner/include/global_planner/: GlobalPlanner.hpp
GlobalPlanner/include/ss_planner/: SSPath.hpp  SSPathSegment.hpp  SSPlanner.hpp  SSPriority_queue.hpp
GlobalPlanner/include/utils/: Path.hpp  PathPlanner.hpp  State.hpp  dyarray.hpp
GlobalPlanner/src/: SSPlannerTester.cpp
GlobalPlanner/src/a_star_grid/: AStarGrid.cpp  GridState.cpp  GridState.hpp
GlobalPlanner/src/a_star_seed/: AStarSeed.cpp  AStarSeed.h  AStarSeedTester.cpp  SSPriority_queue.cpp  SSPriority_queue.hpp  State.hpp  StateOfCar.hpp
GlobalPlanner/src/global_planner/: GlobalPlanner.cpp  GlobalPlannerTester.cpp
GlobalPlanner/src/ss_planner/: Path.cpp  Path.hpp  PathPlanner.cpp  PathPlanner.hpp  PathSegment.cpp  PathSegment.hpp  Pose.cpp  Pose.hpp  SSPath.cpp  SSPath.hpp  SSPathSegment.cpp  SSPathSegment.hpp  SSPlanner.1  SSPlanner.cpp  SSPlanner.hpp  SSPlannerTester.cpp  SSPriority_queue.cpp  SSPriority_queue.hpp  SSState.cpp  SSState.hpp  Seed.cpp  Seed.hpp  State.cpp  State.hpp  dyarray.cpp
GlobalPlanner/src/utils/: Path.cpp  PathPlanner.cpp  PathSegment.cpp  PathSegment.hpp  Pose.cpp  Seed.cpp  Seed.hpp  State.cpp  State.hpp  dyarray.cpp
Jaus/: CMakeLists.txt  (+2 more)
agv_framework/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
agv_framework/include/: HealthMonitor.hpp  LifeCycle.hpp  constants.hpp
agv_framework/include/Environment/: Environment.hpp  Interpreter.hpp  Model.hpp  Sensor.hpp
agv_framework/include/Planning/: MasterPlanner.hpp  MotionPlanner.hpp
agv_framework/include/Planning/motion_planner/: GlobalPlanner.hpp  LocalPlanner.hpp  SituationalPlanner.hpp
agv_framework/include/Robot/: Controller.hpp  Description.hpp  Robot.hpp  State.hpp
agv_framework/include/environment/: Environment.hpp  Interpreter.hpp  Model.hpp  Sensor.hpp
agv_framework/include/planning/: MasterPlanner.hpp  MotionPlanner.hpp  planner.hpp
agv_framework/include/planning/motion_planner/: GlobalPlanner.hpp  LocalPlanner.hpp  SituationalPlanner.hpp
agv_framework/include/robot/: Description.hpp  Interpreter.hpp  Robot.hpp  Sensor.hpp
agv_framework/include/utils/: Pose2D.hpp
agv_framework/nbproject/: configurations.xml  project.xml
agv_framework/nbproject/private/: configurations.xml  private.xml
agv_framework/src/: HealthMonitor.cpp  LifeCycle.cpp
agv_framework/src/Environment/: Interpreter.cpp  Model.cpp  Sensor.cpp
agv_framework/src/environment/: Environment.cpp  Interpreter.cpp  Model.cpp  Sensor.cpp
agv_framework/src/planning/: MasterPlanner.cpp  MotionPlanner.cpp  planner.cpp
agv_framework/src/planning/motion_planner/: GlobalPlanner.cpp  LocalPlanner.cpp  SituationalPlanner.cpp
agv_framework/src/robot/: Description.cpp  Interpreter.cpp  Robot.cpp  Sensor.cpp
agv_framework/src/utils/: Pose2D.cpp
environment/interpretation/indoor_obstacle_detector/: CMakeLists.txt  manifest.xml
environment/interpretation/indoor_obstacle_detector/include/: LidarData.h
environment/interpretation/indoor_obstacle_detector/src/: LidarData.cpp  lidar_thread.cpp
environment/interpretation/lane_detector/: CMakeLists.txt  manifest.xml  package.xml
environment/interpretation/lane_detector/data/: -  Samples.model  Samples1  Samples1.model  Test3  Test3.model  Test4  Test4.model  abc  abc.model  ipt.txt  ipt_offsets0.txt  ipt_offsets1.txt  ipt_offsets2.txt  new!  new!.model  newTest  originalsample  originalsample.model  test_night  test_night2  test_night2.model  test_night3  test_night3.model  test_night4  test_night4.model
environment/interpretation/lane_detector/include/: LaneDetector.hpp  laneDetector.hpp
environment/interpretation/lane_detector/launch/: module.launch  module.launch#
environment/interpretation/lane_detector/nbproject/: configurations.xml  project.xml
environment/interpretation/lane_detector/src/: LaneDetector.cpp  LaneDetector.h  Lane_main.cpp  backup.cpp  laneDetectorNode.cpp
environment/interpretation/lane_detector_test/: CMakeLists.txt  Makefile  Samples  Samples.model  Samples2  arna.cpp  config.h.in  mainpage.dox  manifest.xml  new  test_k_8  test_k_8.model
environment/interpretation/lane_detector_test/Data/: Samples  Samples (copy).model  Samples.model
environment/interpretation/lane_detector_test/data/: botVariable.txt
environment/interpretation/lane_detector_test/include/: config.h  laneDetector.hpp
environment/interpretation/lane_detector_test/src/: Samples  a.out  generateSamples.cpp  getLaneBinary.cpp  grassRemoval.cpp  inversePerspectiveTransform.cpp  laneDetector.cpp  laneDetectorNode.cpp  obstacleRemoval.cpp  obstacle_removal.cpp  preprocessing.cpp  seperateLanes.cpp
environment/interpretation/lane_navigator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
environment/interpretation/lane_navigator/launch/: module.launch
environment/interpretation/lane_navigator/src/: lane_navigator.cpp  targetFromLane.cpp
environment/interpretation/odometry/: CMakeLists.txt  manifest.xml
environment/interpretation/odometry/src/: odometry.cpp
environment/interpretation/position_from_target/: CMakeLists.txt  mainpage.dox  manifest.xml
environment/interpretation/position_from_target/include/: PosefromTarget.hpp
environment/interpretation/position_from_target/src/: PosefromTarget.cpp
environment/sensing/bumblebee_stereo/: CMakeLists.txt  mainpage.dox  manifest.xml
environment/sensing/bumblebee_stereo/include/: BumblebeeStereo.hpp
environment/sensing/bumblebee_stereo/nbproject/: configurations.xml  project.xml
environment/sensing/bumblebee_stereo/src/: BumblebeeStereo.cpp
environment/sensing/logitech_camera/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
environment/sensing/vectorNav/: CMakeLists.txt  manifest.xml
planning/motion_planning/local_planner/: CMakeLists.txt  Makefile  error.txt  mainpage.dox  manifest.xml
robot/pilots/auro666_pilot/: CMakeLists.txt  mainpage.dox  manifest.xml
(+714 files in other folders)
