<package>
  
  <name>agv_framework</name>
  <description>

     agv_framework

  </description>
  <version>0.0.0</version>
  <maintainer email="krishna.bagadia2@gmail.com">Satya Prakash</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/agv_framework</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
</package>


